@@ -1,3 +1,9 @@
+mcabber (1.0.1-dev)
+
+ * 
+
+ -- Mikael, ?
+
 mcabber (1.0.0)
 
  * Message Carbons support / XEP-0280 (Roeland Jago Douma)
